// Copyright 2018 Istio Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package istio.mixer.adapter.model.v1beta1;

option go_package="istio.io/api/mixer/adapter/model/v1beta1";

// Value is used inside templates for fields that have dynamic types. The actual datatype
// of the field depends on the datatype of the expression used in the operator configuration.
message Value {}

// IPAddress is used inside templates for fields that are of ValueType "IP_ADDRESS"
message IPAddress {}

// Duration is used inside templates for fields that are of ValueType "DURATION"
message Duration {}

// TimeStamp is used inside templates for fields that are of ValueType "TIMESTAMP"
message TimeStamp {}

// DNSName is used inside templates for fields that are of ValueType "DNS_NAME"
message DNSName {}

// EmailAddress is used inside templates for fields that are of ValueType "EMAIL_ADDRESS"
// DO NOT USE !! Under Development
message EmailAddress {}

// Uri is used inside templates for fields that are of ValueType "URI"
// DO NOT USE ! Under Development
message Uri {}
